--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -1,5 +1,99 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import traceback\n",
+    "import boto3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install langchain_community"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install boto3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_community.chat_models import BedrockChat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\apurv\\AppData\\Local\\Temp\\ipykernel_55036\\3442838475.py:16: LangChainDeprecationWarning: The class `BedrockChat` was deprecated in LangChain 0.0.34 and will be removed in 1.0. An updated version of the class exists in the langchain-aws package and should be used instead. To use it run `pip install -U langchain-aws` and import as `from langchain_aws import ChatBedrock`.\n",
+      "  model = BedrockChat(\n"
+     ]
+    }
+   ],
+   "source": [
+    "bedrock_runtime = boto3.client(\n",
+    "    service_name=\"bedrock-runtime\",\n",
+    "    region_name=\"us-east-1\",\n",
+    ")\n",
+    "\n",
+    "model_id = \"anthropic.claude-3-sonnet-20240229-v1:0\"\n",
+    "\n",
+    "model_kwargs =  { \n",
+    "    \"max_tokens\": 2048,\n",
+    "    \"temperature\": 0.0,\n",
+    "    \"top_k\": 250,\n",
+    "    \"top_p\": 1,\n",
+    "    \"stop_sequences\": [\"\\n\\nHuman\"],\n",
+    "}\n",
+    "\n",
+    "model = BedrockChat(\n",
+    "    client=bedrock_runtime,\n",
+    "    model_id=model_id,\n",
+    "    model_kwargs=model_kwargs,\n",
+    ")  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -7,7 +101,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.20"
   }
  },
