--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -42,29 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -U langchain-aws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_community.chat_models import BedrockChat"
+    "from langchain_aws import ChatBedrock"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\apurv\\AppData\\Local\\Temp\\ipykernel_55036\\3442838475.py:16: LangChainDeprecationWarning: The class `BedrockChat` was deprecated in LangChain 0.0.34 and will be removed in 1.0. An updated version of the class exists in the langchain-aws package and should be used instead. To use it run `pip install -U langchain-aws` and import as `from langchain_aws import ChatBedrock`.\n",
-      "  model = BedrockChat(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bedrock_runtime = boto3.client(\n",
     "    service_name=\"bedrock-runtime\",\n",
@@ -81,7 +81,7 @@
     "    \"stop_sequences\": [\"\\n\\nHuman\"],\n",
     "}\n",
     "\n",
-    "model = BedrockChat(\n",
+    "model = ChatBedrock(\n",
     "    client=bedrock_runtime,\n",
     "    model_id=model_id,\n",
     "    model_kwargs=model_kwargs,\n",
